# openjlc

./: .SRCINFO  .gitignore  Cargo.toml  PKGBUILD  README.md  build.rs  clay-config.json  icon.icns  icon.rc  icon.res
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  support_request.yml
.github/workflows/: cargo.yml  rust-ci.yml  rust.yml
LICENCES/: NOTICE
installer/: go.mod  go.sum  main.go  rsrc.syso
rule/: altium_designer.yaml  kicad.yaml
src/: cleaner.rs  cli.rs  config.rs  d_code_normalization.rs  error.rs  extractor.rs  fingerprint_helpers.rs  gerber_modifier.rs  gerber_processor.rs  identifier.rs  injector.rs  lib.rs  log.rs  main.rs  packager.rs  processor.rs  reporter.rs  utils.rs  validator.rs
