[package]
name = "openjlc"
version = "2.21.5"
edition = "2024"
authors = ["Canmi(Canmi21)<t@canmi.icu>"]
description = "Ultra-fast Gerber conversion tool."
license = "MIT"
repository = "https://github.com/canmi21/openjlc"
homepage = "https://github.com/canmi21/openjlc"
documentation = "https://github.com/canmi21/openjlc?tab=readme-ov-file"
readme = "README.md"
keywords = ["kicad","altium","openjlc", "fuckjlc", "transjlc"]
categories = ["command-line-utilities", "parsing", "development-tools"]

[dependencies]
chrono = "0.4"
zip = "2.5"
lazy_static = "1.4"
rand = "0.9"
reqwest = { version = "0.12", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
fancy-regex = "0.14"
notify-rust = "4.11"
sys-info = "0.9"

[lib]
name = "openjlc"
path = "src/lib.rs"

[[bin]]
name = "openjlc"
path = "src/main.rs"