[package]
name = "openjlc"
version = "2.23.5"
edition = "2024"
build = "build.rs"
authors = ["Canmi(Canmi21)<t@canmi.icu>"]
description = "Ultra-fast Gerber conversion tool."
license = "MIT"
repository = "https://github.com/canmi21/openjlc"
homepage = "https://github.com/canmi21/openjlc"
documentation = "https://github.com/canmi21/openjlc?tab=readme-ov-file"
readme = "README.md"
keywords = ["kicad","altium","openjlc", "fuckjlc", "transjlc"]
categories = ["command-line-utilities", "parsing", "development-tools"]

[package.metadata.bundle]
name = "OpenJLC"
identifier = "icu.canmi.openjlc"
icon = ["icon.icns"]
version = "0.1.0"
copyright = "© 2025 Canmi"
category = "DeveloperTool"

[[package.metadata.bundle.macos.document_types]]
name       = "ZIP Archive"
role       = "Viewer"
extensions = ["zip"]

[dependencies]
chrono = "0.4"
zip = "5"
lazy_static = "1.4"
rand = "0.9"
reqwest = { version = "0.12", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
fancy-regex = "0.16"
notify-rust = "4.11"
sys-info = "0.9"
rfd = "0.15"
webbrowser = "1.0"
regex = "1"
md-5 = "0.10"

[lib]
name = "openjlc"
path = "src/lib.rs"

[[bin]]
name = "openjlc"
path = "src/main.rs"